remove min height style that caused alignment issue

--- a/styles/accounts.scss
+++ b/styles/accounts.scss
@@ -7,7 +7,6 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  min-height: 100vh;
   position: relative;
   margin-bottom: 5vh;
 }
